--- a/album.html
+++ b/album.html
@@ -59,12 +59,12 @@
   <div class="gallery">
     <div class="photo">
       <div class="decor">🎀✨</div>
-      <img src="assets/ainur1.jpg" alt="Foto 1">
+      <img src="ainur1.jpg" alt="Foto 1">
       <div class="decor">💖🌸</div>
     </div>
     <div class="photo">
       <div class="decor">💗🎉</div>
-      <img src="assets/ainur2.jpg" alt="Foto 2">
+      <img src="ainur2.jpg" alt="Foto 2">
       <div class="decor">🍬💕</div>
     </div>
     <div class="photo">
